--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             Basic Bootstrap website. <br>
                             Used: HTML, CSS, Bootstrap <br>
                             <a href="https://iftkhr.github.io/photogallery/" target="_blank"><i class="fas fa-globe"></i></a>
-                            <a href="https://github.com/iftkhr/reverseofno" target="_blank"><i class="fab fa-github"></i></a>      
+                            <a href="https://github.com/iftkhr/photogallery" target="_blank"><i class="fab fa-github"></i></a>      
                         </p>    
                     </div>
                 </div>
