--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                     Hi!<br>
                     I am Iftakhar Kaunain Ashhar, a Mechanical Engineering Student at Zakir Husain College of Engineering and Technology, Aligarh Muslim University, Aligarh.<br>
                     I am enthused by computers and machines. I love the empowerment computers give me to bring my imagination to the world!<br> 
+                    I would love to be at the intersection of mechanical and computer engineering, experimenting and innovating the technologies of the future. 
                 </p>
                 <p class="details">
                     <i class="fas fa-map-marker-alt"></i> <br> Aligarh, UP, India<br>
@@ -75,18 +76,18 @@
                 <h3><a href="/resume/resume_iftakharkaunainashhar.pdf" target="_blank">Download Résumé</a></h3>
                 <h4>Education</h4>
                 <p>
-                    Bachelor of Technology (Honors) <br>
+                    <strong> Bachelor of Technology (Honors) </strong> <br>
                     Mechanical Engineering <br>
                     Zakir Husain College of Engineering and Technology, Aligarh Muslim University <br>
-                    <i>-Studying core mechanical engineering along including programming, design, automation and control. Plan to move towards mechatronics and robotics with electives and extra courses.</i> <br>
-                    <i>-Perfect grades in electronics, electrical and programming courses.</i>
+                    <i>-Studying core mechanical engineering including computer programming, design, automation and control. Plan to move towards mechatronics and robotics with electives and extra courses.</i> <br>
+                    <i>-Perfect grades in electronics, electrical and computer programming courses.</i>
                 </p>
                 <p class="duration">
                     2019-Present <br>
                     8.848/10
                 </p>
                 <p>
-                    Senior Secondary School Certificate <br>
+                    <strong>Senior Secondary School Certificate</strong>  <br>
                     Science <br>
                     Saiyed Hamid Senior Secondary School, Aligarh Muslim University <br>
                     <i>-Studied Physics, Chemistry, Mathematics, English and Physical Education.</i> <br>
@@ -97,34 +98,34 @@
                     74/100 
                 </p>
                 <p>
-                    Secondary School Certificate <br>
+                    <strong>Secondary School Certificate</strong>  <br>
                     CBSE <br>
                     Our Lady of Fatima Senior Secondary School <br>
                     <i>-Studied from kindergarten to Grade 10, was always at the top of the class.</i> <br>
                     <i>-Participated in competitions and won tremendous awards. Represented school at various levels.</i> <br>
                     <i>-Compèred many events including school annual function.</i> <br>
-                    <i>-Took initiatives and was a part of school's parliament.</i>
+                    <i>-Took initiatives and was a part of the school's parliament.</i>
                 </p>
                 <p class="duration">
                     2004-2016 <br>
                     10/10
                 </p>
-                <h4>Experience</h4>
+                <h4>Experiences</h4>
                 <p>
-                    Software Engineer <br>
+                    <strong>Software Engineer</strong> <br>
                     Autonomous Underwater Vehicle Club <br>
-                    Zakir Husain College of Engineering and Technology, Aligarh Muslim University <br> <br>
-                    <i>-Work on autonomous vehicles for national and international competitions.</i> <br>
-                    <i>-Maintain club's website.</i> 
+                    Zakir Husain College of Engineering and Technology, Aligarh Muslim University <br>
+                    <i>-Working on autonomous vehicles for national and international competitions.</i> <br>
+                    <i>-Maintaining club's website.</i> 
                 </p>
                 <p class="duration">
                     2020-Present <br>
                     ROS, Gazebo, Python, OpenCV, NumPy, HTML, CSS, JavaScript
                 </p>
                 <p>
-                    Web Developer <br>
+                    <strong>Web Developer</strong>  <br>
                     Freelance <br>
-                    <i>-Work on websites and chrome extensions.</i>
+                    <i>-Working on websites and chrome extensions.</i>
                 </p>
                 <p class="duration">
                     2019-Present <br>
