--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
                 </p>
                 <h4>Experiences</h4>
                 <p>
-                    <strong>Software Engineer</strong> <br>
+                    <strong>Computer Team Member</strong> <br>
                     Autonomous Underwater Vehicle Club <br>
                     Zakir Husain College of Engineering and Technology, Aligarh Muslim University <br>
                     <i>-Working on autonomous vehicles for national and international competitions.</i> <br>
-                    <i>-Maintaining club's website.</i> 
+                    <i>-Working club's website.</i> 
                 </p>
                 <p class="duration">
                     2020-Present <br>
