--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                     <strong> Bachelor of Technology (Honors) </strong> <br>
                     Mechanical Engineering <br>
                     Zakir Husain College of Engineering and Technology, Aligarh Muslim University <br>
-                    <i>-Studying core mechanical engineering including computer programming, design, automation and control. Plan to move towards mechatronics and robotics with electives and extra courses.</i> <br>
-                    <i>-Perfect grades in electronics, electrical and computer programming courses.</i>
+                    <i>-Studying core mechanical engineering subjects like solid & fluid mechanics, machine drawing & design, manufacturing and thermodynamics.</i> <br>
+                    <i>-Studied additional subjects like computer programming, electronics & electrical engineering, mathematics and sciences.</i>
                 </p>
                 <p class="duration">
                     2019-Present <br>
@@ -116,7 +116,7 @@
                     Autonomous Underwater Vehicle Club <br>
                     Zakir Husain College of Engineering and Technology, Aligarh Muslim University <br>
                     <i>-Working on autonomous vehicles for national and international competitions.</i> <br>
-                    <i>-Working club's website.</i> 
+                    <i>-Working on club's website.</i> 
                 </p>
                 <p class="duration">
                     2020-Present <br>
