--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
             <div id="contact">
                 <h2>Contact</h2>
                 <a href="mailto:iftakhar.ashhar@gmail.com" target="_blank"><i class="far fa-envelope"></i></a>
-                <a href="https://www.linkedin.com/in/ikashhar/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://www.linkedin.com/in/iftkhr/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                 <a href="https://github.com/iftkhr" target="_blank"><i class="fab fa-github"></i></a>
-                <a href="https://www.instagram.com/iftakhar.ashhar/" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.instagram.com/_iftkhr_/" target="_blank"><i class="fab fa-instagram"></i></a>
             </div>
         </main>
         <script src="https://kit.fontawesome.com/8808911dd5.js" crossorigin="anonymous"></script>
