updated new projects

--- a/index.html
+++ b/index.html
@@ -1,156 +1,281 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width">
-        <title>iftkhr</title>
-        <link rel="stylesheet" href="css/style.css">
-    </head>
-    <body>
-        <header>
-                <h1 id="short">iftkhr</h1>
-                <h1 id="long">Iftakhar Kaunain Ashhar</h1>
-                <i class="fas fa-chevron-circle-down" id="dropdown" onclick="nav()"></i>
-                <img src="/img/0.jpg" alt="me" id="img">
-                <nav class="hide" id="nav">
-                    <a href="#about">About</a>
-                    <a href="#projects">Projects</a>
-                    <a href="#resume">Résumé</a>
-                    <a href="#contact">Contact</a>
-                </nav>
-                
-        </header>
-        <main>
-            <div id="about">
-                <h2>About me</h2>
-                <p class="para"> 
-                    Hi!<br>
-                    I am Iftakhar Kaunain Ashhar, a Mechanical Engineering Student at Zakir Husain College of Engineering and Technology, Aligarh Muslim University, Aligarh.<br>
-                    I am enthused by computers and machines. I love the empowerment computers give me to bring my imagination to the world!<br> 
-                    I would love to be at the intersection of mechanical and computer engineering, experimenting and innovating the technologies of the future. 
-                </p>
-                <p class="details">
-                    <i class="fas fa-map-marker-alt"></i> <br> Aligarh, UP, India<br>
-                    <i class="fas fa-briefcase"></i> <br> Software Engineer, <br> AUV-ZHCET<br>
-                </p>
-            </div>
-            <div id="projects">
-                <h2>Projects</h2>
-                <div class="projectcontainer">
-                    <img src="/img/1.jpg" alt="">
-                    <div id="textcontainer">
-                        <p>
-                            SOCKET CAM <br>
-                            Script to stream video over LAN. <br>
-                            Used: Python, OpenCV, Socket <br>
-                            <a href="https://github.com/iftkhr/socket_cam" target="_blank"><i class="fab fa-github"></i></a>   
-                        </p>
-                    </div>
-                </div> 
-                <div class="projectcontainer">
-                    <img src="/img/2.jpg" alt="">
-                    <div id="textcontainer">
-                        <p>
-                            NUMBER REVERSER <br>
-                            Script to reverse a number. <br>
-                            Used: C <br>
-                            <a href="https://github.com/iftkhr/reverseofno" target="_blank"><i class="fab fa-github"></i></a>      
-                        </p>   
-                    </div>
-                </div> 
-                <div class="projectcontainer">
-                    <img src="/img/3.jpg" alt="">
-                    <div id="textcontainer">
-                        <p>
-                            PHOTOGALLERY <br>
-                            Basic Bootstrap website. <br>
-                            Used: HTML, CSS, Bootstrap <br>
-                            <a href="https://iftkhr.github.io/photogallery/" target="_blank"><i class="fas fa-globe"></i></a>
-                            <a href="https://github.com/iftkhr/photogallery" target="_blank"><i class="fab fa-github"></i></a>      
-                        </p>    
-                    </div>
-                </div>
-            </div>
-            <div id="resume">
-                <h2>Résumé</h2>
-                <h3><a href="/resume/resume_iftakharkaunainashhar.pdf" target="_blank">Download Résumé</a></h3>
-                <h4>Education</h4>
-                <p>
-                    <strong> Bachelor of Technology (Honors) </strong> <br>
-                    Mechanical Engineering <br>
-                    Zakir Husain College of Engineering and Technology, Aligarh Muslim University <br>
-                    <i>-Studying core mechanical engineering subjects like solid & fluid mechanics, machine drawing & design, manufacturing and thermodynamics.</i> <br>
-                    <i>-Studied additional subjects like computer programming, electronics & electrical engineering, mathematics and sciences.</i>
-                </p>
-                <p class="duration">
-                    2019-Present <br>
-                    8.848/10
-                </p>
-                <p>
-                    <strong>Senior Secondary School Certificate</strong>  <br>
-                    Science <br>
-                    Saiyed Hamid Senior Secondary School, Aligarh Muslim University <br>
-                    <i>-Studied Physics, Chemistry, Mathematics, English and Physical Education.</i> <br>
-                    <i>-Participated in speech competitions and quizzes.</i>
-                </p>
-                <p class="duration">
-                    2016-2018 <br>
-                    74/100 
-                </p>
-                <p>
-                    <strong>Secondary School Certificate</strong>  <br>
-                    CBSE <br>
-                    Our Lady of Fatima Senior Secondary School <br>
-                    <i>-Studied from kindergarten to Grade 10, was always at the top of the class.</i> <br>
-                    <i>-Participated in competitions and won tremendous awards. Represented school at various levels.</i> <br>
-                    <i>-Compèred many events including school annual function.</i> <br>
-                    <i>-Took initiatives and was a part of the school's parliament.</i>
-                </p>
-                <p class="duration">
-                    2004-2016 <br>
-                    10/10
-                </p>
-                <h4>Experiences</h4>
-                <p>
-                    <strong>Computer Team Member</strong> <br>
-                    Autonomous Underwater Vehicle Club <br>
-                    Zakir Husain College of Engineering and Technology, Aligarh Muslim University <br>
-                    <i>-Working on autonomous vehicles for national and international competitions.</i> <br>
-                    <i>-Working on club's website.</i> 
-                </p>
-                <p class="duration">
-                    2020-Present <br>
-                    ROS, Gazebo, Python, OpenCV, NumPy, HTML, CSS, JavaScript
-                </p>
-                <p>
-                    <strong>Web Developer</strong>  <br>
-                    Freelance <br>
-                    <i>-Working on websites and chrome extensions.</i>
-                </p>
-                <p class="duration">
-                    2019-Present <br>
-                    HTML, CSS, JavaScript, Bootstrap
-                </p>
-                <h4>Skillset</h4>
-                <p>
-                    C, Python, JavaScript <br>
-                    ROS, OpenCV, NumPy, Gazebo, Socket <br>
-                    HTML, CSS, Bootstrap <br>
-                    Git, Linux <br>
-                    AutoCAD, SolidWorks <br>
-                    MS Word, Excel, PowerPoint
-                </p>
-            </div>
-            <div id="contact">
-                <h2>Contact</h2>
-                <a href="mailto:iftakhar.ashhar@gmail.com" target="_blank"><i class="far fa-envelope"></i></a>
-                <a href="https://www.linkedin.com/in/iftkhr/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                <a href="https://github.com/iftkhr" target="_blank"><i class="fab fa-github"></i></a>
-                <a href="https://www.instagram.com/_iftkhr_/" target="_blank"><i class="fab fa-instagram"></i></a>
-            </div>
-        </main>
-        <script src="https://kit.fontawesome.com/8808911dd5.js" crossorigin="anonymous"></script>
-        <script src="js/function.js"></script>
-    </body>
-
-</html>    
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>iftkhr</title>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <header>
+      <h1 id="short">iftkhr</h1>
+      <h1 id="long">Iftakhar Kaunain Ashhar</h1>
+      <i class="fas fa-chevron-circle-down" id="dropdown" onclick="nav()"></i>
+      <img src="/img/me.jpg" alt="me" id="img" />
+      <nav class="hide" id="nav">
+        <a href="#about">About</a>
+        <a href="#projects">Projects</a>
+        <a href="#resume">Résumé</a>
+        <a href="#contact">Contact</a>
+      </nav>
+    </header>
+    <main>
+      <div id="about">
+        <h2>About me</h2>
+        <p class="para">
+          Hi!<br />
+          I am Iftakhar Kaunain Ashhar, an Engineering Student at Zakir Husain
+          College of Engineering and Technology, Aligarh Muslim University,
+          Aligarh.<br />
+          I am enthused by computers. I love the empowerment computers give me
+          to bring my imagination to the world!<br />
+          I work on website and application development. I also work on
+          autonomous underwater vehicles.
+        </p>
+        <p class="details">
+          <i class="fas fa-map-marker-alt"></i> <br />
+          Aligarh, UP, India<br />
+          <i class="fas fa-briefcase"></i> <br />
+          Software Engineer, <br />
+          AUV-ZHCET<br />
+        </p>
+      </div>
+      <div id="projects">
+        <h2>Projects</h2>
+        <div class="projectcontainer">
+          <img src="/img/socket.jpg" alt="" />
+          <div id="textcontainer">
+            <p>
+              SOCKET CAM <br />
+              Script to stream video over LAN. <br />
+              Used: Python, OpenCV, Socket <br />
+              <a href="https://github.com/iftkhr/socket_cam" target="_blank"
+                ><i class="fab fa-github"></i
+              ></a>
+            </p>
+          </div>
+        </div>
+        <div class="projectcontainer">
+          <img src="/img/auv.png" alt="" />
+          <div id="textcontainer">
+            <p>
+              AUV WEBSITE <br />
+              A full-fledged website for a collegiate club. <br />
+              Used: HTML, CSS, JavaScript <br />
+              <a href="https://iftkhr.github.io/auv/" target="_blank"
+                ><i class="fas fa-globe"></i
+              ></a>
+              <a href="https://github.com/iftkhr/auv" target="_blank"
+                ><i class="fab fa-github"></i
+              ></a>
+            </p>
+          </div>
+        </div>
+        <div class="projectcontainer">
+          <img src="/img/photogallery.png" alt="" />
+          <div id="textcontainer">
+            <p>
+              PHOTOGALLERY <br />
+              Basic Bootstrap website gallery. <br />
+              Used: HTML, CSS, Bootstrap <br />
+              <a href="https://iftkhr.github.io/photogallery/" target="_blank"
+                ><i class="fas fa-globe"></i
+              ></a>
+              <a href="https://github.com/iftkhr/photogallery" target="_blank"
+                ><i class="fab fa-github"></i
+              ></a>
+            </p>
+          </div>
+        </div>
+        <div class="projectcontainer">
+          <img src="/img/reverser.png" alt="" />
+          <div id="textcontainer">
+            <p>
+              NUMBER REVERSER <br />
+              Script to reverse a number. <br />
+              Used: C <br />
+              <a href="https://github.com/iftkhr/reverseofno" target="_blank"
+                ><i class="fab fa-github"></i
+              ></a>
+            </p>
+          </div>
+        </div>
+        <div class="projectcontainer">
+          <img src="/img/bookstore.png" alt="" />
+          <div id="textcontainer">
+            <p>
+              BOOKSTORE <br />
+              Script to store and list books. <br />
+              Used: C <br />
+              <a href="https://github.com/iftkhr/bookstore" target="_blank"
+                ><i class="fab fa-github"></i
+              ></a>
+            </p>
+          </div>
+        </div>
+        <div class="projectcontainer">
+          <img src="/img/old.png" alt="" />
+          <div id="textcontainer">
+            <p>
+              OLD PORTFOLIO <br />
+              An older version of my portfolio website. <br />
+              Used: HTML, CSS, JavaScript <br />
+              <a
+                href="https://iftkhr.github.io/iftkhr.github.io-old/"
+                target="_blank"
+                ><i class="fas fa-globe"></i
+              ></a>
+              <a href="https://github.com/iftkhr/auv" target="_blank"
+                ><i class="fab fa-github"></i
+              ></a>
+            </p>
+          </div>
+        </div>
+      </div>
+      <div id="resume">
+        <h2>Résumé</h2>
+        <h3>
+          <a href="/resume/resume_iftakharkaunainashhar.pdf" target="_blank"
+            >Download Résumé</a
+          >
+        </h3>
+        <h4>Education</h4>
+        <p>
+          <strong> Bachelor of Technology (Honors) </strong> <br />
+          Mechanical Engineering <br />
+          Zakir Husain College of Engineering and Technology, Aligarh Muslim
+          University <br />
+          <i
+            >-Studying core mechanical engineering subjects like solid & fluid
+            mechanics, machine drawing & design, manufacturing and
+            thermodynamics.</i
+          >
+          <br />
+          <i
+            >-Studied additional subjects like computer programming, electronics
+            & electrical engineering, mathematics and sciences.</i
+          >
+        </p>
+        <p class="duration">
+          2019-Present <br />
+          8.848/10
+        </p>
+        <p>
+          <strong>Senior Secondary School Certificate</strong> <br />
+          Science <br />
+          Saiyed Hamid Senior Secondary School, Aligarh Muslim University <br />
+          <i
+            >-Studied Physics, Chemistry, Mathematics, English and Physical
+            Education.</i
+          >
+          <br />
+          <i>-Participated in speech competitions and quizzes.</i>
+        </p>
+        <p class="duration">
+          2016-2018 <br />
+          74/100
+        </p>
+        <p>
+          <strong>Secondary School Certificate</strong> <br />
+          CBSE <br />
+          Our Lady of Fatima Senior Secondary School <br />
+          <i
+            >-Studied from kindergarten to Grade 10, was always at the top of
+            the class.</i
+          >
+          <br />
+          <i
+            >-Participated in competitions and won tremendous awards.
+            Represented school at various levels.</i
+          >
+          <br />
+          <i>-Compèred many events including school annual function.</i> <br />
+          <i>-Took initiatives and was a part of the school's parliament.</i>
+        </p>
+        <p class="duration">
+          2004-2016 <br />
+          10/10
+        </p>
+        <h4>Experiences</h4>
+        <p>
+          <strong>Computer Team Member</strong> <br />
+          Autonomous Underwater Vehicle Club <br />
+          Zakir Husain College of Engineering and Technology, Aligarh Muslim
+          University <br />
+          <i
+            >-Working on autonomous vehicles for national and international
+            competitions.</i
+          >
+          <br />
+          <i>-Working on club's website.</i>
+        </p>
+        <p class="duration">
+          2020-Present <br />
+          ROS, Gazebo, Python, OpenCV, NumPy, HTML, CSS, JavaScript
+        </p>
+        <p>
+          <strong>Web Developer</strong> <br />
+          Freelance <br />
+          <i>-Working on websites and chrome extensions.</i>
+        </p>
+        <p class="duration">
+          2019-Present <br />
+          HTML, CSS, JavaScript, Bootstrap
+        </p>
+        <h4>Additional Courses</h4>
+        <p>
+          <strong>Web Development for Everybody</strong> <br />
+          Coursera <br />
+          University of Michigan <br />
+          <i>-Learnt front end development.</i>
+        </p>
+        <p class="duration">
+          July-2020 <br />
+          HTML, CSS, JavaScript, Bootstrap
+        </p>
+        <p>
+          <strong>Python for Everybody</strong> <br />
+          Coursera <br />
+          University of Michigan <br />
+          <i
+            >-Learnt Python, basic data structures, scraping data and data
+            visualization.</i
+          >
+        </p>
+        <p class="duration">
+          November-2020 <br />
+          Python
+        </p>
+        <h4>Skillset</h4>
+        <p>
+          C, Python, JavaScript <br />
+          ROS, OpenCV, NumPy, Gazebo, Socket <br />
+          HTML, CSS, Bootstrap <br />
+          Git, Linux <br />
+          AutoCAD, SolidWorks <br />
+          MS Word, Excel, PowerPoint
+        </p>
+      </div>
+      <div id="contact">
+        <h2>Contact</h2>
+        <a href="mailto:iftakhar.ashhar@gmail.com" target="_blank"
+          ><i class="far fa-envelope"></i
+        ></a>
+        <a href="https://www.linkedin.com/in/iftkhr/" target="_blank"
+          ><i class="fab fa-linkedin-in"></i
+        ></a>
+        <a href="https://github.com/iftkhr" target="_blank"
+          ><i class="fab fa-github"></i
+        ></a>
+        <a href="https://www.instagram.com/_iftkhr_/" target="_blank"
+          ><i class="fab fa-instagram"></i
+        ></a>
+      </div>
+    </main>
+    <script
+      src="https://kit.fontawesome.com/8808911dd5.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="js/function.js"></script>
+  </body>
+</html>
