--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <h1 id="short">iftkhr</h1>
       <h1 id="long">Iftakhar Kaunain Ashhar</h1>
       <i class="fas fa-chevron-circle-down" id="dropdown" onclick="nav()"></i>
-      <img src="/img/me.jpg" alt="me" id="img" />
+      <img src="/img/me.png" alt="me" id="img" />
       <nav class="hide" id="nav">
         <a href="#about">About</a>
         <a href="#projects">Projects</a>
@@ -43,7 +43,7 @@
       <div id="projects">
         <h2>Projects</h2>
         <div class="projectcontainer">
-          <img src="/img/socket.jpg" alt="" />
+          <img src="/img/socket.png" alt="" />
           <div id="textcontainer">
             <p>
               SOCKET CAM <br />
