--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         </p>
         <h4>Additional Courses</h4>
         <p>
-          <strong>Web Development for Everybody</strong> <br />
+          <strong>Web Development</strong> <br />
           Coursera <br />
           University of Michigan <br />
           <i>-Learnt front end development.</i>
@@ -234,7 +234,7 @@
           HTML, CSS, JavaScript, Bootstrap
         </p>
         <p>
-          <strong>Python for Everybody</strong> <br />
+          <strong>Python</strong> <br />
           Coursera <br />
           University of Michigan <br />
           <i
