--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
       <nav class="hide" id="nav">
         <a href="#about">About</a>
         <a href="#projects">Projects</a>
-        <a href="#resume">Résumé</a>
         <a href="#contact">Contact</a>
       </nav>
     </header>
@@ -36,8 +35,10 @@
           <i class="fas fa-map-marker-alt"></i> <br />
           Aligarh, UP, India<br />
           <i class="fas fa-briefcase"></i> <br />
-          Software Engineer, <br />
+          Computer Team Member, <br />
           AUV-ZHCET<br />
+          <i class="fas fa-scroll"></i> <br>
+          <a href="/resume/IftakharKaunainAshhar_Resume.pdf" target="_blank">Download Résumé</a>
         </p>
       </div>
       <div id="projects">
@@ -131,130 +132,6 @@
             </p>
           </div>
         </div>
-      </div>
-      <div id="resume">
-        <h2>Résumé</h2>
-        <h3>
-          <a href="/resume/resume_iftakharkaunainashhar.pdf" target="_blank"
-            >Download Résumé</a
-          >
-        </h3>
-        <h4>Education</h4>
-        <p>
-          <strong> Bachelor of Technology (Honors) </strong> <br />
-          Mechanical Engineering <br />
-          Zakir Husain College of Engineering and Technology, Aligarh Muslim
-          University <br />
-          <i
-            >-Studying core mechanical engineering subjects like solid & fluid
-            mechanics, machine drawing & design, manufacturing and
-            thermodynamics.</i
-          >
-          <br />
-          <i
-            >-Studied additional subjects like computer programming, electronics
-            & electrical engineering, mathematics and sciences.</i
-          >
-        </p>
-        <p class="duration">
-          2019-Present <br />
-          8.848/10
-        </p>
-        <p>
-          <strong>Senior Secondary School Certificate</strong> <br />
-          Science <br />
-          Saiyed Hamid Senior Secondary School, Aligarh Muslim University <br />
-          <i
-            >-Studied Physics, Chemistry, Mathematics, English and Physical
-            Education.</i
-          >
-          <br />
-          <i>-Participated in speech competitions and quizzes.</i>
-        </p>
-        <p class="duration">
-          2016-2018 <br />
-          74/100
-        </p>
-        <p>
-          <strong>Secondary School Certificate</strong> <br />
-          CBSE <br />
-          Our Lady of Fatima Senior Secondary School <br />
-          <i
-            >-Studied from kindergarten to Grade 10, was always at the top of
-            the class.</i
-          >
-          <br />
-          <i
-            >-Participated in competitions and won tremendous awards.
-            Represented school at various levels.</i
-          >
-          <br />
-          <i>-Compèred many events including school annual function.</i> <br />
-          <i>-Took initiatives and was a part of the school's parliament.</i>
-        </p>
-        <p class="duration">
-          2004-2016 <br />
-          10/10
-        </p>
-        <h4>Experiences</h4>
-        <p>
-          <strong>Computer Team Member</strong> <br />
-          Autonomous Underwater Vehicle Club <br />
-          Zakir Husain College of Engineering and Technology, Aligarh Muslim
-          University <br />
-          <i
-            >-Working on autonomous vehicles for national and international
-            competitions.</i
-          >
-          <br />
-          <i>-Working on club's website.</i>
-        </p>
-        <p class="duration">
-          2020-Present <br />
-          ROS, Gazebo, Python, OpenCV, NumPy, HTML, CSS, JavaScript
-        </p>
-        <p>
-          <strong>Web Developer</strong> <br />
-          Freelance <br />
-          <i>-Working on websites and chrome extensions.</i>
-        </p>
-        <p class="duration">
-          2019-Present <br />
-          HTML, CSS, JavaScript, Bootstrap
-        </p>
-        <h4>Additional Courses</h4>
-        <p>
-          <strong>Web Development</strong> <br />
-          Coursera <br />
-          University of Michigan <br />
-          <i>-Learnt front end development.</i>
-        </p>
-        <p class="duration">
-          July-2020 <br />
-          HTML, CSS, JavaScript, Bootstrap
-        </p>
-        <p>
-          <strong>Python</strong> <br />
-          Coursera <br />
-          University of Michigan <br />
-          <i
-            >-Learnt Python, basic data structures, scraping data and data
-            visualization.</i
-          >
-        </p>
-        <p class="duration">
-          November-2020 <br />
-          Python
-        </p>
-        <h4>Skillset</h4>
-        <p>
-          C, Python, JavaScript <br />
-          ROS, OpenCV, NumPy, Gazebo, Socket <br />
-          HTML, CSS, Bootstrap <br />
-          Git, Linux <br />
-          AutoCAD, SolidWorks <br />
-          MS Word, Excel, PowerPoint
-        </p>
       </div>
       <div id="contact">
         <h2>Contact</h2>
