--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           Computer Team Member, <br />
           AUV-ZHCET<br />
           <i class="fas fa-scroll"></i> <br>
-          <a href="/resume/IftakharKaunainAshhar_Resume.pdf" target="_blank">Download Résumé</a>
+          <a href="https://drive.google.com/file/d/1eR57Js7z2v4a_JYKUtfKRionX5s_BXYy" target="_blank">Download Résumé</a>
         </p>
       </div>
       <div id="projects">
